# roman-telescope-data

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  nginx.conf  pyproject.toml
data/: planets.json
data/cahoy_grid/: Jupiter_1x_0.8AU.csv  Jupiter_1x_10AU.csv  Jupiter_1x_2AU.csv  Jupiter_1x_5AU.csv  Jupiter_3x_0.8AU.csv  Jupiter_3x_10AU.csv  Jupiter_3x_2AU.csv  Jupiter_3x_5AU.csv  Neptune_10x_0.8AU.csv  Neptune_10x_10AU.csv  Neptune_10x_2AU.csv  Neptune_10x_5AU.csv  Neptune_30x_0.8AU.csv  Neptune_30x_10AU.csv  Neptune_30x_2AU.csv  Neptune_30x_5AU.csv  manifest.json
data/picaso_spectra/: picaso_09e43311098b308a.npz  picaso_2891f9647a37efe8.npz  picaso_294733c500182459.npz  picaso_39fe710471805fa8.npz  picaso_4aee809acf8ba50a.npz  picaso_57b922df5877b826.npz  picaso_749ad84216ea0300.npz  picaso_76809ca47328b8bc.npz  picaso_859af1d9a83e560a.npz  picaso_8ffd846738755cd5.npz  picaso_a82a66d80c1e433b.npz  picaso_e116003bdbcfab64.npz
docs/: discovery-plan.md  handover.md  picaso-plan.md  picaso-runbook.md  pipeline-explained.md  scaling-plan.md  spectrum-engines.md
pipeline/: __init__.py  catalog.py  classify.py  cli.py  config.py  demo_planets.py  models.py  observations.py  system.py
pipeline/bands/: integrate.py  reconstruct.py
pipeline/colour/: cie.py  family.py
pipeline/emit/: build.py  cache.py  writer.py
pipeline/fetch/: archive.py  targets.py
pipeline/illuminant/: base.py  (+1 more)
tests/: test_cahoy.py  test_catalog.py  test_classify.py  test_export.py  test_picaso.py  test_router.py  test_sanity_gate.py  test_seam.py
web/: build.py  svg.py
(+19 files in other folders)
