[project]
name = "exoplanet-palette"
version = "0.1.0"
description = "Colour palettes for every known exoplanet, derived from physics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "colour-science>=0.4.4",
    "pydantic>=2.6",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Heavy model-spectrum engine; not needed for the site build or the parametric provider.
# Activating it also requires downloading PICASO's opacity/reference data (multi-GB) — see docs.
picaso = [
    "picaso>=3.1",
    "astropy>=6.0",
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
